--- a/text-aws.html
+++ b/text-aws.html
@@ -29,6 +29,15 @@
                 <p class="file">
                     <input name="image" type="file" id="file" class="feedback-input">
                 </p>
+                <label id="lab">
+                    Seleccionar idioma:
+                    <select name="Idioma" id="lang">
+                        <option value="es" selected>Español</option>
+                        <option value="en">Inglés</option>
+                    </select>
+                </label>
+                <br>
+                <br>
                 <div class="submit">
                     <button type="button" class="button-blue" onclick=f3()>Enviar</button>
                     <div class="ease"></div>
