--- a/text-aws.html
+++ b/text-aws.html
@@ -9,8 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="form.css">
-    <script src="form.js"></script>
+    <link rel="stylesheet" href="css/parcial.css">
+    <script src="js/parcial.js"></script>
 </head>
 <body>
 <div class="container">
@@ -39,7 +39,7 @@
                 <br>
                 <br>
                 <div class="submit">
-                    <button type="button" class="button-blue" onclick=f3()>Enviar</button>
+                    <button type="button" class="button-blue" onclick=f()>Enviar</button>
                     <div class="ease"></div>
                 </div>
             </form>
