--- a/foreign_visitor.html
+++ b/foreign_visitor.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Acceso no autorizado</title>
+    <link rel="stylesheet" href="css/parcial_foreign.css">
+    <script src="js/parcial_foreign.js"></script>
 </head>
 <body>
-<iframe width="1920" height="1080"
-        src="https://www.youtube.com/embed/DLzxrzFCyOs?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div id="tittle">
+    <h1>No estás en la red de Icesi, lo sentimos</h1>
+</div>
+<div id="videodiv">
+    <iframe id="video" width="744" height="500" onload=f() frameborder="0" allow="autoplay; encrypted-media"
+            allowfullscreen></iframe>
+</div>
+
+
 </body>
 </html>
