Pre final version

--- a/results.html
+++ b/results.html
@@ -5,8 +5,10 @@
     <title>Resultados</title>
     <link rel="stylesheet" href="css/results.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/results.js"></script>
     <script>document.write("<div id=\"tittle\">\n" +
         "    <h1>Resultados</h1>\n" +
+        "    <button class='button-blue' type='button' onclick=f()>Home</button>\n" +
         "</div>\n" +
         "<div id=\"resultsdiv\">\n" +
         "    <textarea id='resultslabel' disabled title=\"test\"></textarea>\n" +
