--- a/text-aws.html
+++ b/text-aws.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Parcial 1 - Cloud Computing</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/parcial.css">
+
     <script src="js/parcial.js"></script>
 </head>
 <body>
 <div class="container">
-
-
     <div id="form-main">
-
         <div id="form-div">
             <h1>PROCESAMIENTO DE TEXTO CON AWS</h1>
             <br>
             <br>
             <form class="montform" id="reused_form" enctype=&quot;multipart/form-data&quot;>
-                <!--<p class="text">-->
-                <!--<textarea name="message" class="feedback-input" id="comment" placeholder="Message"></textarea>-->
-                <!--</p>-->
+
                 <p class="file">
                     <input name="image" type="file" id="file" class="feedback-input">
                 </p>
@@ -43,6 +40,23 @@
                     <div class="ease"></div>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Error</h4>
+                </div>
+                <div class="modal-body">
+                    <p id="modal_text">Archivo no soportado</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
